contracts/escrow/test_output_v2.txt
cargo :     Blocking 
waiting for file lock 
on package cache
At line:1 char:1
+ cargo test 2>&1 | 
Out-File -FilePath 
test_output_v2.txt 
-Encoding asc ...
+ ~~~~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (    Blocking wa.   
 ..n package cache:S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
    Blocking waiting 
for file lock on 
package cache
   Compiling escrow 
v0.1.0 (C:\Users\ADMIN\D
esktop\midea-drips\Talen
ttrust-Contracts\contrac
ts\escrow)
warning: unused 
imports: `IntoVal` and 
`Symbol`
  --> contracts\escrow\s
rc\test.rs:20:24
   |
20 |     vec, Address, 
Env, IntoVal, 
TryIntoVal, Symbol,
   |                    
    ^^^^^^^             
 ^^^^^^
   |
   = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error[E0107]: method 
takes 0 generic 
arguments but 1 generic 
argument was supplied
   --> contracts\escrow\
src\test.rs:188:32
    |
188 |         topics.get
(0).unwrap().try_into_va
l::<soroban_sdk::Symbol>
(&env) == Ok(symbol_shor
t!("refund"))
    |                   
             ^^^^^^^^^^^
^-----------------------
 help: remove the 
unnecessary generics
    |                   
             |
    |                   
             expected 0 
generic arguments
    |
note: method defined 
here, with 0 generic 
parameters
   --> C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-env-common-22
.1.3\src\convert.rs:33:8
    |
 33 |     fn 
try_into_val(&self, 
env: &E) -> Result<V, 
Self::Error>;
    |        
^^^^^^^^^^^^

For more information 
about this error, try 
`rustc --explain E0107`.
warning: `escrow` (lib 
test) generated 1 
warning
error: could not 
compile `escrow` (lib 
test) due to 1 previous 
error; 1 warning emitted
